--- a/index.html
+++ b/index.html
@@ -288,8 +288,6 @@
     .header-row h4, .result-header h4 {
         font-weight: 700;
         font-size: 1.2em;
-        flex: 1;
-        text-align: center;
         margin: 0;
     }
 
@@ -300,6 +298,7 @@
     #generatePdfBtn {
         display: block;
         margin: 0 auto 10px auto;
+        margin-left: 0;
     }
 
     .checkbox-label {
@@ -735,6 +734,18 @@
         width: 100%;
     }
 
+    .result-wrapper-chart {
+        width: 100%;
+        max-width: none;
+    }
+
+    .summary-bars {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .summary-bar {
         background: linear-gradient(135deg, var(--accent-gradient-start), var(--accent-gradient-end));
         color: var(--primary-text);
@@ -746,24 +757,18 @@
         position: relative;
         cursor: pointer;
         transition: color 0.3s ease;
-        width: 80%;
-        max-width: 900px;
+        width: 90%;
+        max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
     }
 
-    .summary-bar .label {
-        font-weight: normal;
-        color: var(--primary-text);
+    .summary-bar .label, .summary-bar .value {
+        transition: opacity 0.3s ease;
     }
 
-    .summary-bar .value {
-        font-weight: bold;
-        color: var(--primary-text);
-    }
-
-    .summary-bar:hover {
-        color: transparent;
+    .summary-bar:hover .label, .summary-bar:hover .value {
+        opacity: 0;
     }
 
     .summary-bar:hover::after {
