--- a/index.html
+++ b/index.html
@@ -301,11 +301,19 @@
     .pdf-button-container {
         text-align: right;
         margin-bottom: 10px;
+        width: 100%;
     }
 
     #generatePdfBtn {
         display: inline-block;
         margin: 0;
+        text-align: center;
+    }
+
+    .result-section .pdf-button-container #generatePdfBtn.btn-primary {
+        display: inline-block !important;
+        margin-left: auto;
+        margin-right: 0;
     }
 
     .checkbox-label {
