--- a/index.html
+++ b/index.html
@@ -838,7 +838,8 @@
     .harmonogram h5.btn-toggle {
         margin: 0 auto;
         text-align: center;
-        font-size: 0.8125em;
+        font-size: 0.75em;
+        font-weight: 700;
         cursor: pointer;
         color: var(--primary-text);
         text-decoration: underline;
@@ -846,6 +847,7 @@
         display: block;
         width: fit-content;
     }
+
 
     .harmonogram table {
         width: 100%;
