--- a/index.html
+++ b/index.html
@@ -868,6 +868,10 @@
         text-transform: uppercase;
     }
 
+    .harmonogram td .star {
+        color: var(--accent-color, #c2b280) !important;
+    }
+
     .harmonogram .table-striped tbody tr:nth-of-type(odd) {
         background-color: rgba(0, 0, 0, 0.05);
     }
@@ -880,7 +884,7 @@
 
     .harmonogram-legend .star {
         color: var(--accent-color, #c2b280) !important;
-        font-size: 0.6em; 
+        font-size: 1.8em; 
         vertical-align: middle;
         margin-right: 2px;
         line-height: 1;
