--- a/index.html
+++ b/index.html
@@ -854,6 +854,7 @@
         border-collapse: collapse;
         font-size: 0.9em;
         color: var(--primary-text);
+        margin-bottom: 0;
     }
 
     .harmonogram th, .harmonogram td {
