--- a/index.html
+++ b/index.html
@@ -993,6 +993,11 @@
         color: var(--primary-text);
     }
 
+    .dark-mode .harmonogram td .star,
+    .dark-mode .harmonogram-legend .star {
+        color: #c2b280;
+    }
+
 
     @media (max-width: 768px) {
         .harmonogram table {
