--- a/index.html
+++ b/index.html
@@ -978,12 +978,16 @@
         border-right: 1px solid rgba(var(--border-color-rgb), 0.3);
         border: 1px solid #666666; /* Dopasowanie obramowania */
     }
-    
+
+
     .dark-mode .harmonogram th {
+        border-bottom: 2px solid #666666;
+    }
+    /*.dark-mode .harmonogram th {
         color: var(--primary-text);
         border-bottom: 2px solid #666666;
         border-right: 1px solid rgba(var(--border-color-rgb), 0.3);
-    }
+    }*/
     
     .dark-mode .harmonogram td {
         background: #404040;
