--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <div class="info-text">Możesz wybrać: DZIEŃ, MIESIĄC, ROK</div> 
                             </div>
                             <div class="form-group">
-                                <label for="oprocentowanie" class="form-label">Oproc.</label>
+                                <label for="oprocentowanie" class="form-label">Oprocentowanie</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.1" value="4">
                                     <span class="input-group-text">%</span>
@@ -137,7 +137,7 @@
                                         <tr>
                                             <th id="pierwszaKolumnaNaglowek">Okres</th>
                                             <th>Wartość lokaty</th>
-                                            <th>Oprocentowanie</th>
+                                            <th>Oproc.</th>
                                             <th>Odsetki brutto</th>
                                             <th>Suma odsetek</th>
                                             <th>Podatek</th>
@@ -850,8 +850,8 @@
 
 
     .harmonogram table {
-        width: 95%;
-        max-width: 95%;
+        width: 97%;
+        max-width: 97%;
         margin: 0 auto;
         display: table;
         border-collapse: separate;
@@ -873,8 +873,9 @@
         text-align: center;
         vertical-align: middle;
         border-bottom: 2px solid var(--border-color);
-        border-right: 1px solid rgba(var(--border-color-rgb), 0.3);
+        border-right: none; /*1px solid rgba(var(--border-color-rgb), 0.3);*/
         border: 1px solid var(--border-color); 
+        border-top: none;
     }
 
     .harmonogram td {
@@ -893,10 +894,6 @@
         border-right: none;
     }
 
-    .harmonogram td .star {
-        color: var(--accent-color, #c2b280) !important;
-    }
-
     .harmonogram .table-striped tbody tr:nth-of-type(odd) {
         background-color: rgba(0, 0, 0, 0.05);
     }
@@ -905,9 +902,17 @@
         margin-top: 4px;
         font-size: 0.35em;
         text-align: left;
+        padding-left: 1.5cm;
     }
 
-    .harmonogram td .star,
+    .harmonogram td .star {
+        color: #c2b280 !important;
+        font-size: 1em;
+        vertical-align: middle;
+        margin-right: 2px;
+        line-height: 1;
+    }
+    
     .harmonogram-legend .star {
         color: #c2b280 !important;
         font-size: 1.8em;
@@ -975,19 +980,16 @@
         background: #666666;
         color: #e0e0e0;
         border-bottom: 2px solid #666666;
-        border-right: 1px solid rgba(var(--border-color-rgb), 0.3);
-        border: 1px solid #666666; /* Dopasowanie obramowania */
+        border-right: none; /*1px solid rgba(var(--border-color-rgb), 0.3);*/
+        border: 1px solid #666666;
     }
-
 
     .dark-mode .harmonogram th {
-        border-bottom: 2px solid #666666;
-    }
-    /*.dark-mode .harmonogram th {
         color: var(--primary-text);
         border-bottom: 2px solid #666666;
-        border-right: 1px solid rgba(var(--border-color-rgb), 0.3);
-    }*/
+        border-right: none;
+        border-top: none;
+    }
     
     .dark-mode .harmonogram td {
         background: #404040;
@@ -1963,7 +1965,7 @@
                         headerRows: 1,
                         widths: ['auto', 'auto', 'auto', 'auto', 'auto', 'auto', 'auto', 'auto'],
                         body: [
-                            ['Okres', 'Wartość lokaty', 'Oproc.', 'Odsetki brutto', 'Suma odsetek', 'Podatek', 'Zysk netto', 'Suma netto'],
+                            ['Okres', 'Wartość lokaty', 'Oprocentowanie', 'Odsetki brutto', 'Suma odsetek', 'Podatek', 'Zysk netto', 'Suma netto'],
                             ...state.harmonogramData.map(row => [
                                 row.okres,
                                 `${row.wartoscLokaty} zł`,
