--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
         text-align: center;
         vertical-align: middle;
         border-bottom: 2px solid var(--border-color);
-        border-right: none; /*1px solid rgba(var(--border-color-rgb), 0.3);*/
+        border-right: 1px solid rgba(var(--border-color-rgb), 0.3);
         border: 1px solid var(--border-color); 
         border-top: none;
     }
@@ -902,7 +902,7 @@
         margin-top: 4px;
         font-size: 0.35em;
         text-align: left;
-        padding-left: 1.5cm;
+        padding-left: 1cm;
     }
 
     .harmonogram td .star {
@@ -987,7 +987,7 @@
     .dark-mode .harmonogram th {
         color: var(--primary-text);
         border-bottom: 2px solid #666666;
-        border-right: none;
+        border-right: 1px solid #666666;
         border-top: none;
     }
     
