--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
         max-width: 97%;
         margin: 0 auto;
         display: table;
-        border-collapse: separate;
+        border-collapse: collapse;
         border-spacing: 0;
         border-radius: 10px;
         overflow: hidden;
