--- a/index.html
+++ b/index.html
@@ -930,12 +930,12 @@
         vertical-align: middle;
     }
 
-    .harmonogram td:nth-child(3) {
+    /*.harmonogram td:nth-child(3) {
         display: inline-flex;
         align-items: center;
         justify-content: center;
         padding: clamp(1px, 0.5vw, 10px);
-    }
+    }*/
 
     .star {
         font-size: 1em;
