--- a/index.html
+++ b/index.html
@@ -2080,32 +2080,32 @@
                 const starText = hasStar && kapitalizacja !== "naKoniec" ? "★ Zmiana oprocentowania.\n" : "";
                 const footerNoteText = `${starText}`;
     
-                // Znaki wodne w siatce 4x7, rozmiar 20x30 px
+                // Znaki wodne w siatce 4x7, rozmiar 30x20 px, mniej przezroczyste
                 const watermark = logoBase64 ? {
                     stack: [
                         ...Array.from({ length: 28 }, (_, i) => ({
                             image: logoBase64,
-                            width: 20,
-                            height: 30,
+                            width: 30,
+                            height: 20,
                             absolutePosition: { x: (i % 4) * 140 + 40, y: Math.floor(i / 4) * 110 + 40 },
-                            opacity: 0.05
+                            opacity: 0.1 // Mniej przezroczyste niż 0.05
                         }))
                     ]
                 } : null;
     
                 const docDefinition = {
                     pageSize: 'A4',
-                    pageMargins: [40, 100, 40, 40], // Zwiększony górny margines do 100 px
+                    pageMargins: [40, 80, 40, 40], // Górny margines zmniejszony do 80 px
                     defaultStyle: { font: 'Roboto' },
                     header: logoBase64 ? {
-                        margin: [0, 40, 0, 0], // Dodatkowy margines w headerze
+                        margin: [40, 20, 40, 0], // Marginesy boczne 40 px, górny 20 px
                         columns: [
-                            { image: logoBase64, width: 100, alignment: 'center', margin: [0, 0, 0, 40] }, // Margines dolny dla logo
-                            { text: `Data: ${today}`, alignment: 'right', fontSize: 8, margin: [0, 0, 20, 40] }
+                            { image: logoBase64, width: 100, alignment: 'center', margin: [0, 0, 0, 20] }, // Dolny margines dla logo
+                            { text: `Data: ${today}`, alignment: 'right', fontSize: 8, margin: [0, 0, 20, 20] }
                         ]
                     } : { 
-                        margin: [0, 40, 0, 0], 
-                        text: `Data: ${today}`, alignment: 'right', fontSize: 8, margin: [0, 0, 20, 40] 
+                        margin: [40, 20, 40, 0], 
+                        text: `Data: ${today}`, alignment: 'right', fontSize: 8, margin: [0, 0, 20, 20] 
                     },
                     background: watermark,
                     content: [
