--- a/index.html
+++ b/index.html
@@ -2133,8 +2133,8 @@
                     },
                     background: watermark,
                     content: [
-                        { text: 'Podsumowanie wyników lokaty', style: 'header' },
-                        { text: "Podsumowanie:", style: 'sectionHeader', margin: [0, 30, 0, 15] },
+                        { text: 'Podsumowanie wyników lokaty', style: 'header', margin: [28.35, 20, 0, 10] }, // Dodano lewy margines 28.35 px (1 cm)
+                        { text: "Podsumowanie:", style: 'sectionHeader', margin: [28.35, 30, 0, 15] }, // Dodano lewy margines 28.35 px (1 cm)
                         { 
                             ul: summaryItems.map(item => ({
                                 text: [
@@ -2142,11 +2142,11 @@
                                     { text: item.value, style: 'listItem', bold: true }
                                 ]
                             })), 
-                            margin: [0, 0, 0, 30] 
+                            margin: [28.35, 0, 0, 30] // Dodano lewy margines 28.35 px (1 cm)
                         }
                     ],
                     styles: {
-                        header: { fontSize: 16, bold: true, alignment: 'center', margin: [0, 20, 0, 10] },
+                        header: { fontSize: 16, bold: true, alignment: 'center' },
                         sectionHeader: { fontSize: 12, bold: true },
                         listItem: { fontSize: 10, margin: [0, 2, 0, 2] },
                         tableHeader: { fontSize: 8, bold: true, alignment: 'center', color: '#000000', fillColor: '#C2B280' },
@@ -2212,6 +2212,7 @@
                 });
         });
     }
+    
     document.getElementById('siteLogo').addEventListener('click', () => {
         window.open('https://finance-brothers.pl', '_blank');
     });
