--- a/index.html
+++ b/index.html
@@ -2583,7 +2583,9 @@
         const calculateColumnWidths = () => {
             const allRows = [headers, ...tableData];
             const pageWidth = 595.28; // Szerokość strony A4 w punktach
-            const totalMargin = 28.34; // 0,5 cm z każdej strony (14.17 * 2)
+            const leftMargin = 14.17; // 0,5 cm z lewej
+            const rightMargin = 28.34; // 1 cm z prawej
+            const totalMargin = leftMargin + rightMargin; // Suma marginesów bocznych
             const availableWidth = pageWidth - totalMargin; // Dostępna szerokość strony
     
             // Oblicz maksymalne długości dla nagłówków i wierszy
@@ -2743,7 +2745,7 @@
                                     paddingTop: function () { return 2; },
                                     paddingBottom: function () { return 2; }
                                 },
-                                pageMargins: [14.17, 60, 14.17, 20], // 0,5 cm z lewej i prawej
+                                pageMargins: [14.17, 60, 28.34, 20], // 0,5 cm z lewej, 1 cm z prawej
                                 margin: [0, 0, 0, 0],
                                 alignment: 'center'
                             },
