--- a/index.html
+++ b/index.html
@@ -2772,7 +2772,7 @@
                     { text: footerText, style: 'footer', margin: [0, 10, 0, 0] }
                 ],
                 images: {
-                    logo: 'https://kalkulatorobligacji.pl/images/logo.png'
+                    logo: 'cropped-logo-FB-1.png'
                 },
                 styles: {
                     header: { fontSize: 16, bold: true, alignment: 'center' },
